# differential-dataflow

./: Cargo.toml
differential-dataflow/: Cargo.toml
differential-dataflow/src/: consolidation.rs
dogsdogsdogs/: Cargo.toml
dogsdogsdogs/src/operators/: half_join.rs
src/: capture.rs  logging.rs
src/algorithms/graphs/: sequential.rs
src/operators/: reduce.rs
src/operators/arrange/: arrangement.rs  upsert.rs
src/trace/implementations/: rhh.rs
